<?xml version="1.0" encoding="utf-8"?>

<com.ramotion.foldingcell.FoldingCell xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/tools"
    xmlns:folding-cell="http://schemas.android.com/apk/res-auto"
    android:id="@+id/folding_cell"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="8dp"
    android:layout_marginRight="10dp"
    android:layout_marginBottom="8dp"
    app:ignore="NamespaceTypo"
    folding-cell:additionalFlipsCount="1"
    folding-cell:animationDuration="1000"
    folding-cell:backSideColor="@color/white"
    folding-cell:cameraHeight="30">

    <RelativeLayout
        android:id="@+id/cell_content_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_500"
        android:visibility="gone">

        <ImageView
            android:id="@+id/close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/backbutton"
            android:src="@drawable/ic_close" />

        <TextView
            android:id="@+id/inputSuggestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:paddingStart="20sp"
            android:text="@string/enter_input_string"
            android:textColor="@color/white"
            app:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/inputSuggestion"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:autofillHints=""
            android:background="@drawable/card_fill_round"
            android:digits="0123456789,"
            android:hint="@string/enter_your_input"
            android:inputType=""
            android:padding="16dp"
            android:text="@string/hardcoded"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/input"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/generateRandom"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="20dp"
                android:layout_weight="1"
                android:background="@drawable/card_fill_round"
                android:padding="10dp"
                android:text="@string/generate_random_btn"
                android:textColor="@color/purple_500"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/done"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:background="@drawable/card_fill_round"
                android:padding="10dp"
                android:text="@string/done_btn"
                android:textColor="@color/purple_500"
                android:textSize="14sp" />

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/cell_title_view"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@drawable/card_fill_round">

        <TextView
            android:id="@+id/index"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/purple_card_fill_round"
            android:gravity="center_vertical"
            android:letterSpacing="0.15"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:text=""
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@id/index"
            android:gravity="center_vertical"
            android:letterSpacing="0.15"
            android:text=""
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:transitionName="submenu" />

    </RelativeLayout>

</com.ramotion.foldingcell.FoldingCell>



