<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.MainCourse.Sorting.SortingActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:translationZ="0.1dp"
        app:elevation="0dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/purple_500"
            android:theme="@style/SearchToolbar"
            app:titleTextColor="@color/white">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/backBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_alignParentStart="true"
                    android:contentDescription="@string/backbutton"
                    android:src="@drawable/ic_back" />

                <TextView
                    android:id="@+id/toolbar_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="16dp"
                    android:layout_toEndOf="@id/backBtn"
                    android:letterSpacing="0.15"
                    android:text="@string/bubble_sort"
                    android:textAlignment="viewStart"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:transitionName="submenu" />

                <co.ankurg.expressview.ExpressView
                    android:id="@+id/likeButton"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:paddingEnd="16sp"
                    tools:ignore="RtlSymmetry" />

            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/appBarLayout">

        <de.blox.treeview.TreeView
            android:visibility="gone"
            android:id="@+id/idTreeView"
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            android:layout_height="match_parent" />

        <RelativeLayout
            android:id="@+id/rL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/card_fill_round"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/iteration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingTop="16dp"
                android:paddingEnd="16dp"
                android:text="@string/steps"
                android:visibility="visible" />

            <RelativeLayout
                android:id="@+id/ll"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:layout_below="@id/iteration"
                android:layout_centerHorizontal="true" />

            <TextView
                android:id="@+id/elementString"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/ll"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_toStartOf="@id/elementTV"
                android:text="@string/element"
                android:visibility="gone" />

            <TextView
                android:id="@+id/elementTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/ll"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:padding="10dp"
                android:textColor="@color/white"
                android:visibility="gone" />

        </RelativeLayout>

        <com.hanks.htextview.HTextView
            android:id="@+id/animatedText"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@id/rL"
            android:gravity="center"
            android:textColor="@color/white"
            android:background="@color/black"
            android:text=""
            android:textSize="20sp" />

        <TextView
            android:id="@+id/definition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/animatedText"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/card_round"
            android:gravity="center"
            android:padding="10dp"
            android:textColor="#000000"
            android:textSize="20sp" />

        <RelativeLayout
            android:id="@+id/actionMenu"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_alignParentBottom="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignParentBottom="true"
                android:background="@color/purple_500"
                android:orientation="horizontal"
                android:weightSum="3">

                <ImageView
                    android:id="@+id/back"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:src="@drawable/ic_playback"
                    android:contentDescription="@string/backbutton" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:contentDescription="@string/backbutton" />

                <ImageView
                    android:id="@+id/next"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:src="@drawable/ic_playforward"
                    android:contentDescription="@string/backbutton" />

            </LinearLayout>

            <ImageView
                android:id="@+id/play"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:padding="10dp"
                android:src="@drawable/ic_play"
                android:contentDescription="@string/backbutton" />

        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>